--- a/packages/frontend/src/css/components/content.css
+++ b/packages/frontend/src/css/components/content.css
@@ -1,9 +1,7 @@
-@import '../breakpoints';
-
 .content {
   padding: 0 var(--size-4) 0 var(--size-4);
-  font-weight: var(--font-weight-regular);
   font-size: var(--font-size-md);
+  font-weight: var(--font-weight-regular);
   line-height: var(--line-height-md);
 }
 .content__inner {
@@ -24,22 +22,22 @@
 .content h1 {
   margin-top: var(--size-20);
   margin-bottom: var(--size-4);
-  font-weight: var(--font-weight-bold);
   font-size: var(--size-8);
-  line-height: var(--size-10);
+  font-weight: var(--font-weight-bold);
   letter-spacing: -0.0625rem;
+  line-height: var(--size-10);
 }
 .content h2 {
   margin-top: var(--size-12);
   font-size: var(--size-6);
-  line-height: var(--size-9);
   letter-spacing: -0.03125rem;
+  line-height: var(--size-9);
 }
 .content h3 {
   margin-top: var(--size-8);
   font-size: var(--size-5);
-  line-height: var(--size-8);
   letter-spacing: -0.03125rem;
+  line-height: var(--size-8);
 }
 .content h4 {
   margin-top: var(--size-6);
@@ -64,8 +62,8 @@
   display: inline-block;
   padding: 0 var(--size-4);
   color: var(--color-fg-3);
-  font-weight: var(--font-weight-bold);
   font-size: var(--font-size-md);
+  font-weight: var(--font-weight-bold);
 }
 .header-link:hover {
   color: var(--color-fg-2);
@@ -74,9 +72,9 @@
 .content hr {
   width: 100%;
   height: 1px;
+  border: 0;
   margin-top: var(--size-12);
   background-color: var(--color-fg-5);
-  border: 0;
 }
 
 .content a:not(.header-link) {
@@ -90,8 +88,8 @@
 }
 .content a:focus-visible,
 .content a:focus-visible code {
-  color: var(--color-bg-1);
   background-color: var(--color-fg-1);
+  color: var(--color-bg-1);
   outline: 0;
 }
 
@@ -155,11 +153,11 @@
 
 .content code {
   padding: var(--size-1);
-  color: var(--color-fg-2);
-  font-size: var(--font-size-code);
-  font-family: var(--font-family-code);
   background-color: var(--color-bg-2);
   border-radius: var(--border-radius);
+  color: var(--color-fg-2);
+  font-family: var(--font-family-code);
+  font-size: var(--font-size-code);
 }
 .content pre {
   margin: var(--size-6) 0;
@@ -175,14 +173,14 @@
   font-weight: var(--font-weight-bold);
 }
 
-@media (min-width: $breakpoint-md) {
+@media (min-width: 640px) {
   .content__inner {
     max-width: 70ch;
     margin: 0 auto;
   }
 }
 
-@media (min-width: $breakpoint-xl) {
+@media (min-width: 1280px) {
   .content {
     margin-left: var(--toc-width);
   }
@@ -192,7 +190,7 @@
   }
 }
 
-@media (min-width: $breakpoint-xxl) {
+@media (min-width: 1600px) {
   .content__inner {
     max-width: 70ch;
   }
@@ -205,8 +203,8 @@
   .content h6 {
     position: relative;
     display: block;
-    margin-left: calc(-1 * var(--size-9));
     padding-left: var(--size-9);
+    margin-left: calc(-1 * var(--size-9));
   }
 
   .header-link {
