--- a/packages/frontend/src/css/components/menu.css
+++ b/packages/frontend/src/css/components/menu.css
@@ -1,16 +1,16 @@
 .menu {
   position: fixed;
-  top: var(--top-bar-height); // `.top-bar` height
+  top: var(--top-bar-height); /* `.top-bar` height */
   bottom: 0;
   left: 0;
   display: none;
   width: 100%;
   padding: var(--size-3) 0;
-  overflow-y: auto;
+  border-right: 1px solid var(--color-fg-5);
+  background-color: var(--color-bg-1);
   font-size: var(--font-size-md);
   line-height: var(--line-height-md);
-  background-color: var(--color-bg-1);
-  border-right: 1px solid var(--color-fg-5);
+  overflow-y: auto;
 }
 .--menu-visible .menu {
   display: block;
@@ -42,8 +42,8 @@
   color: var(--color-fg-2);
 }
 .menu a:focus-visible {
-  color: var(--color-bg-1);
   background-color: var(--color-fg-1);
+  color: var(--color-bg-1);
   outline: 0;
 }
 .menu a[target='_blank']:after {
@@ -54,11 +54,11 @@
 }
 
 .menu code {
-  font-size: var(--font-size-code);
   font-family: var(--font-family-code);
+  font-size: var(--font-size-code);
 }
 
-@media (min-width: $breakpoint-lg) {
+@media (min-width: 960px) {
   .menu {
     width: var(--toc-width);
     font-size: var(--font-size-sm);
@@ -73,7 +73,7 @@
   }
 }
 
-@media (min-width: $breakpoint-xl) {
+@media (min-width: 1280px) {
   .menu {
     display: block;
     border-right: 0;
